# Post-Machine-Emulator

./: CMakeLists.txt  README.md
arch/: Post_machine.oob
err_unknown_symbol/: CMakeLists.txt  err_unknown_symbol.cpp  err_unknown_symbol.h
main/: CMakeLists.txt  main.cpp  main.cpp.in
original_rule/: CMakeLists.txt  original_rule.cpp  original_rule.h
pm_controller/: CMakeLists.txt  pm_controller.cpp  pm_controller.h  pm_controller.h.in
pm_record/: CMakeLists.txt  pm_record.cpp  pm_record.h
rules_manager/: CMakeLists.txt  regex_pair.cpp  rule.cpp  rules_manager.cpp  rules_manager.h  rules_manager.h.in
symbol_container/: CMakeLists.txt  symbol_container.cpp  symbol_container.h
unit_tests/: CMakeLists.txt  test_pm_controller.cpp  test_pm_controller.cpp.in  test_rules_manager.cpp  test_rules_manager.cpp.in  test_symbol_container.cpp  test_symbol_container.cpp.in
unit_tests/input_files/: test_file_1
